force-app/main/default/objects/BasiqEntityTransaction_v2__c/BasiqEntityTransaction_v2__c.object-meta.xml
<CustomObject>
    <label>Basiq Entity Transaction</label>
    <nameField>
        <label>Basiq Entity Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Basiq Entity Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>