force-app/main/default/objects/BasiqEntityTransaction_v2__c/fields/BasiqEntityAccount__c.field-meta.xml
<CustomField>
    <fullName>BasiqEntityAccount__c</fullName>
    <label>Basiq Entity Account</label>
    <referenceTo>BasiqEntityAccount_v2__c</referenceTo>
    <relationshipLabel>Basiq Entity Transactions</relationshipLabel>
    <relationshipName>Basiq_Entity_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>