force-app/main/default/objects/BasiqEntityTransaction_v2__c/fields/BasiqTransactionId__c.field-meta.xml
<CustomField>
    <fullName>BasiqTransactionId__c</fullName>
    <label>Basiq Transaction Id</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>