force-app/main/default/objects/BasiqEntityTransaction_v2__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Basiq Entity Transactions</relationshipLabel>
    <relationshipName>Basiq_Entity_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>