force-app/main/default/objects/BasiqEntityTransaction_v2__c/fields/PostDate__c.field-meta.xml
<CustomField>
    <fullName>PostDate__c</fullName>
    <label>Post Date</label>
    <type>DateTime</type>
</CustomField>