force-app/main/default/objects/BasiqEntityTransaction_v2__c/fields/SubClass__c.field-meta.xml
<CustomField>
    <fullName>SubClass__c</fullName>
    <label>SubClass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>