force-app/main/default/objects/BasiqEntityTransaction_v2__c/fields/TransactionDate__c.field-meta.xml
<CustomField>
    <fullName>TransactionDate__c</fullName>
    <label>Transaction Date</label>
    <type>DateTime</type>
</CustomField>